--- a/jogos/test/style.css
+++ b/jogos/test/style.css
@@ -6,11 +6,11 @@
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
+    font-size: 15vh;
     margin: 4px 2px;
     cursor: pointer;
-    width: 64px;
-    height: 64px;
+    width: 20vw;
+    height: 20vh;
 }
 
 .centered {
